fixed interior quicklinks overlap
added a padding-top of 20px to separate the quicklinks title and the list underneath

--- a/UniversityCollege_cssCleanup/skin.css
+++ b/UniversityCollege_cssCleanup/skin.css
@@ -76,6 +76,10 @@ table#dnn_ctr11279_Repository_FooterTable {
   margin-top: 10px;
 }
 
+#dnn_ctr14019_HtmlModule_lblContent{
+	padding-top:20px;
+}
+
 /** 
  * -------------------------------------------
  * Reset CSS
